kustomization/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubecost-exporter
  namespace: kubecost-exporter
  labels:
    app: kubecost-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubecost-exporter
  template:
    metadata:
      labels:
        app: kubecost-exporter
    spec:
      serviceAccountName: kubecost-exporter
      containers:
        - name: kubecost-exporter
          image: kubecost-exporter:0.0.2-alpha
          ports:
            - containerPort: 9150
              name: metrics
              protocol: TCP
