kustomization/svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: kubecost-exporter
  namespace: kubecost-exporter
  labels:
    app: kubecost-exporter
spec:
  selector:
    app: kubecost-exporter
  ports:
    - name: metrics
      port: 9050
